# Second-Brain

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
client/: package-lock.json  package.json
client/src/: App.tsx
docs/: ARCHITECTURE.md
server/: .env.example  pyproject.toml
server/app/: config.py  main.py
server/secondbrain/: __main__.py  engine.py  indexer.py  vault_reader.py
