[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-ollama>=0.10.1",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
