[project]
name = "server"
version = "0.1.0"
description = "SecondBrain backend — RAG API and ingestion over an Obsidian vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-chroma>=0.5.5",
    "pydantic-settings>=2.14.2",
    "python-frontmatter>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
